Ajustes Finais e Alterações nos Nomes dos Arquivos

--- a/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
+++ b/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Beneficios alimentação saudável</title>
+    <link rel="stylesheet" href="/FitlyApp/Base/base.css" />
+    <link rel="stylesheet" href="css/style-beneficios.css" />
+    <script
+      src="https://kit.fontawesome.com/a1f8cb2104.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beneficios alimentação saudável</title>
-  <link rel="stylesheet" href="/FitlyApp/Base/base.css">
-  <link rel="stylesheet" href="css/style-beneficios.css">
-  <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
- <header>
+  <body>
+    <header>
       <h1 class="logo">
         <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
         <a href="/FitlyApp"><h2>Fitly</h2></a>
@@ -19,16 +21,13 @@
       <nav class="nav-menu">
         <ul>
           <li>
-            <a href="#inicio">Início</a>
+            <a href="/FitlyApp/">Início</a>
           </li>
           <li>
-            <a href="#plataforma">Nossa Plataforma</a>
+            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
           </li>
           <li>
-            <a href="/Sobre-o-projeto/">Sobre o projeto</a>
-          </li>
-          <li>
-            <a class="contato" href="/Artigos/index.html">Artigos</a>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
         </ul>
       </nav>
@@ -39,79 +38,116 @@
       </div>
     </header>
 
-  <main>
-    <section>
-      <h1>Benefícios da alimentação equilibrada</h1>
-      <p class="meio">
-        Adotar uma alimentação equilibrada é essencial para a promoção da
-        saúde ao longo da vida. Uma dieta rica em nutrientes contribui
-        diretamente para o bem-estar geral, ajudando na prevenção de doenças
-        crônicas e na manutenção do peso ideal.
-      </p>
-      <ul>
-        <li>
-          <img
-            src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/Prato_com_arroz_e_feijão,_frango_grelhado,_batata_frita,_salada_e_ovo_frito_como_adicionais.jpg"
-            alt="#">
-          <div class="texto">
-            <h2>Prato ideal</h2>
-            <p>Um prato saudável deve ser variado e conter carboidratos (arroz, batata), proteínas (frango, feijão) e
-              muitas verduras e legumes. Pequenas quantidades de gorduras boas, como azeite, também são importantes.
-              <br>
-            </p>
-            <a href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais "
-              target="_blank"> Leia mais sobre...</a>
-          </div>
-        </li>
-        <li>
-          <img
-            src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/jonathan-borba-lrQPTQs7nQQ-unsplash%201.png"
-            alt="#">
-          <div class="texto">
-            <h2>Exercícios e Nutrição</h2>
-            <p>Uma alimentação saudável é essencial para quem pratica exercícios. Ela fornece energia, melhora o
-              desempenho e acelera a recuperação muscular, ajudando a prevenir lesões e fortalecer o sistema
-              imunológico. <br></p>
-            <a href="https://drpauloklein.com.br/blog/a-importancia-da-alimentacao-saudavel-e-atividade-fisica"
-              target="_blank"> Leia mais sobre...</a>
-          </div>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h1>Os malefícios de alimentos ultraprocessados</h1>
-      <p class="meio">O consumo excessivo de produtos industrializados com aditivos químicos, corantes e conservantes
-        pode trazer sérios prejuízos à saúde, aumentando o risco de obesidade, doenças cardiovasculares e diabetes tipo
-        2.</p>
-      <ul>
-        <li>
-          <img
-            src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/logan-weaver-lgnwvr-qgZRZI-pKgM-unsplash.jpg"
-            alt="#">
-          <div class="texto">
-            <h2>Riscos do Fast Food</h2>
-            <p>Fast food é um exemplo comum de ultraprocessado, cheio de gorduras ruins, sódio e açúcares. O consumo
-              frequente aumenta o risco de obesidade, diabetes e problemas cardíacos, além de possuir poucos nutrientes.
-              <br>
-            </p>
-            <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/" target="_blank"> Leia mais
-              sobre...</a>
-          </div>
-        </li>
-        <li>
-          <img src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/Group%2024.png" alt="#">
-          <div class="texto">
-            <h2>Atenção aos Rótulos</h2>
-            <p>Saber ler os rótulos ajuda a evitar ultraprocessados. Prefira produtos com poucos ingredientes e fique
-              atento a termos como açúcares, gorduras trans, corantes e conservantes. Verifique também o sódio por
-              porção. <br> </p>
-            <a href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/" target="_blank">
-              Leia mais sobre...</a>
-          </div>
-        </li>
-      </ul>
-    </section>
-  </main>
+    <main>
+      <section>
+        <h1>Benefícios da alimentação equilibrada</h1>
+        <p class="meio">
+          Adotar uma alimentação equilibrada é essencial para a promoção da
+          saúde ao longo da vida. Uma dieta rica em nutrientes contribui
+          diretamente para o bem-estar geral, ajudando na prevenção de doenças
+          crônicas e na manutenção do peso ideal.
+        </p>
+        <ul>
+          <li>
+            <img
+              src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/Prato_com_arroz_e_feijão,_frango_grelhado,_batata_frita,_salada_e_ovo_frito_como_adicionais.jpg"
+              alt="#"
+            />
+            <div class="texto">
+              <h2>Prato ideal</h2>
+              <p>
+                Um prato saudável deve ser variado e conter carboidratos (arroz,
+                batata), proteínas (frango, feijão) e muitas verduras e legumes.
+                Pequenas quantidades de gorduras boas, como azeite, também são
+                importantes.
+                <br />
+              </p>
+              <a
+                href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais "
+                target="_blank"
+              >
+                Leia mais sobre...</a
+              >
+            </div>
+          </li>
+          <li>
+            <img
+              src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/jonathan-borba-lrQPTQs7nQQ-unsplash%201.png"
+              alt="#"
+            />
+            <div class="texto">
+              <h2>Exercícios e Nutrição</h2>
+              <p>
+                Uma alimentação saudável é essencial para quem pratica
+                exercícios. Ela fornece energia, melhora o desempenho e acelera
+                a recuperação muscular, ajudando a prevenir lesões e fortalecer
+                o sistema imunológico. <br />
+              </p>
+              <a
+                href="https://drpauloklein.com.br/blog/a-importancia-da-alimentacao-saudavel-e-atividade-fisica"
+                target="_blank"
+              >
+                Leia mais sobre...</a
+              >
+            </div>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h1>Os malefícios de alimentos ultraprocessados</h1>
+        <p class="meio">
+          O consumo excessivo de produtos industrializados com aditivos
+          químicos, corantes e conservantes pode trazer sérios prejuízos à
+          saúde, aumentando o risco de obesidade, doenças cardiovasculares e
+          diabetes tipo 2.
+        </p>
+        <ul>
+          <li>
+            <img
+              src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/logan-weaver-lgnwvr-qgZRZI-pKgM-unsplash.jpg"
+              alt="#"
+            />
+            <div class="texto">
+              <h2>Riscos do Fast Food</h2>
+              <p>
+                Fast food é um exemplo comum de ultraprocessado, cheio de
+                gorduras ruins, sódio e açúcares. O consumo frequente aumenta o
+                risco de obesidade, diabetes e problemas cardíacos, além de
+                possuir poucos nutrientes.
+                <br />
+              </p>
+              <a
+                href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/"
+                target="_blank"
+              >
+                Leia mais sobre...</a
+              >
+            </div>
+          </li>
+          <li>
+            <img
+              src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/Group%2024.png"
+              alt="#"
+            />
+            <div class="texto">
+              <h2>Atenção aos Rótulos</h2>
+              <p>
+                Saber ler os rótulos ajuda a evitar ultraprocessados. Prefira
+                produtos com poucos ingredientes e fique atento a termos como
+                açúcares, gorduras trans, corantes e conservantes. Verifique
+                também o sódio por porção. <br />
+              </p>
+              <a
+                href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/"
+                target="_blank"
+              >
+                Leia mais sobre...</a
+              >
+            </div>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <div>
         <div class="logo">
@@ -177,6 +213,5 @@
       </div>
     </footer>
     <script src="/FitlyApp\Base\script.js"></script>
-</body>
-
+  </body>
 </html>
