--- a/FitlyApp/Referencias/index.html
+++ b/FitlyApp/Referencias/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <header>
+     <header>
       <h1 class="logo">
         <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
         <a href="/FitlyApp"><h2>Fitly</h2></a>
@@ -22,16 +22,13 @@
       <nav class="nav-menu">
         <ul>
           <li>
-            <a href="#inicio">Início</a>
+            <a href="/FitlyApp/">Início</a>
           </li>
           <li>
-            <a href="#plataforma">Nossa Plataforma</a>
+            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
           </li>
           <li>
-            <a href="/Sobre-o-projeto/">Sobre o projeto</a>
-          </li>
-          <li>
-            <a class="contato" href="/Artigos/index.html">Artigos</a>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
         </ul>
       </nav>
