--- a/FitlyApp/index.html
+++ b/FitlyApp/index.html
@@ -39,10 +39,10 @@
             <a href="#plataforma">Nossa Plataforma</a>
           </li>
           <li>
-            <a href="/Sobre-o-projeto/">Sobre o projeto</a>
+            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o projeto</a>
           </li>
           <li>
-            <a class="contato" href="/Artigos/index.html">Artigos</a>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
         </ul>
       </nav>
