--- a/FitlyApp/Artigos/OrganizaçãoAlimentar.html
+++ b/FitlyApp/Artigos/OrganizaçãoAlimentar.html
@@ -8,12 +8,12 @@
         Organização alimentar
     </title>
     <link rel="stylesheet" href="css/organização_alimentar.css">
-    <link rel="stylesheet" href="FitlyApp/Base/base.css">
+    <link rel="stylesheet" href="/FitlyApp/Base/base.css">
     <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
- <header>
+    <header>
       <h1 class="logo">
         <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
         <a href="/FitlyApp"><h2>Fitly</h2></a>
@@ -21,16 +21,13 @@
       <nav class="nav-menu">
         <ul>
           <li>
-            <a href="#inicio">Início</a>
+            <a href="/FitlyApp/">Início</a>
           </li>
           <li>
-            <a href="#plataforma">Nossa Plataforma</a>
+            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
           </li>
           <li>
-            <a href="/Sobre-o-projeto/">Sobre o projeto</a>
-          </li>
-          <li>
-            <a class="contato" href="/Artigos/index.html">Artigos</a>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
         </ul>
       </nav>
