--- a/FitlyApp/Artigos/index.html
+++ b/FitlyApp/Artigos/index.html
@@ -18,23 +18,16 @@
         <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
         <a href="/FitlyApp"><h2>Fitly</h2></a>
       </h1>
-      <button id="btn">
-        <span class="fa-solid fa-moon" id="lua"></span>
-        <span class="fa-solid fa-sun" id="sol"></span>
-      </button>
       <nav class="nav-menu">
         <ul>
           <li>
-            <a href="#inicio">Início</a>
+            <a href="/FitlyApp/">Início</a>
           </li>
           <li>
-            <a href="#plataforma">Nossa Plataforma</a>
+            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
           </li>
           <li>
-            <a href="/Sobre-o-projeto/">Sobre o projeto</a>
-          </li>
-          <li>
-            <a class="contato" href="/Artigos/index.html">Artigos</a>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
         </ul>
       </nav>
