--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="/Sobre-o-projeto/">Sobre o projeto</a>
           </li>
           <li>
-            <a class="contato" href="/Artigos/index.html">Artigos</a>
+            <a class="contato" href="/FitlyApp/Artigos/index.html">Artigos</a>
           </li>
         </ul>
       </nav>
