--- a/FitlyApp/Artigos/MicroHabitos.html
+++ b/FitlyApp/Artigos/MicroHabitos.html
@@ -2,205 +2,240 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Micro-hábitos transformadores</title>
-    <link rel="stylesheet" href="/FitlyApp/Base/base.css">
-    <link rel="stylesheet" href="css/micro-habitos.css">
-    <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Micro-hábitos transformadores</title>
+  <link rel="stylesheet" href="/FitlyApp/Base/base.css">
+  <link rel="stylesheet" href="css/micro-habitos.css">
+  <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header>
-      <h1 class="logo">
-        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
-      </h1>
-      <nav class="nav-menu">
+  <header>
+    <h1 class="logo">
+      <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
+      <a href="/FitlyApp">
+        <h2>Fitly</h2>
+      </a>
+    </h1>
+    <nav class="nav-menu">
+      <button id="btn">
+        <span class="fa-solid fa-moon" id="lua"></span>
+        <span class="fa-solid fa-sun" id="sol"></span>
+      </button>
+      <ul>
+        <li>
+          <a href="/FitlyApp/">Início</a>
+        </li>
+        <li>
+          <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
+        </li>
+        <li>
+          <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="hamburger">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+  </header>
+  <main>
+    <section class="introdução">
+      <h2>
+        Micro-hábitos de atividade física que transformam o dia sem precisar
+        de academia
+      </h2>
+      <p>
+        Muita gente pensa que para ser saudável precisa passar horas na
+        academia, mas isso não é verdade! Pequenos movimentos distribuídos ao
+        longo do dia que têm um efeito gigante na sua saúde, disposiçaõ e
+        humor. Vamos aprender como os micro-hábitos podem mudar sua vida?
+      </p>
+    </section>
+    <section class="explicação">
+      <h3>O que são micro-hábitos?</h3>
+      <p>
+        São pequenas ações que, quando feitas com frequência, trazem
+        benefícios acumulativos. O segredo é <span>constância</span>, não a
+        intensidade.
+      </p>
+      <div class="Exemplos">
+        <div>
+          <h3>Exemplos práticos para incluir no dia a dia</h3>
+          <ul>
+            <li>
+              <p>
+                Suba escada ao invés do elevador.
+              </p>
+            </li>
+            <li>
+              <p>
+                Caminhe 10 minutos depois das refeições.
+              </p>
+            </li>
+            <li>
+              <p>
+                Levante-se a cada hora para alongar os braços e as pernas.
+              </p>
+            </li>
+            <li>
+              <p>
+                Faça 10 agachamentos ou flexões entre as tarefas
+              </p>
+            </li>
+          </ul>
+        </div>
+        <p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/f-9mR5ylwcE?si=RqBp8bXeHXaWtHmV"
+            style="border: 0;"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+          </iframe>
+        </p>
+      </div>
+    </section>
+    <section class="motivo">
+      <h3>
+        Por que isso funciona?
+      </h3>
+      <p>
+        Pequenas pausas ativas aumentam o gasto calórico, melhoram a circulação, reduzem dores musculares e
+        mantém o metabolismo ativo.
+      </p>
+      <p class="dica-extra" id="dica-extra">
+        <span>Dica extra:</span> Coloque alarmes no celular para lembrar de se movimentar a cada hora.
+      </p>
+    </section>
+    <section class="exercicio">
+      <div>
+        <h3>
+          Exercícios fáceis para casa ou trabalho:
+        </h3>
+        <ul>
+          <li>
+            <p>
+              Agachamentos (3 séries de 10).
+            </p>
+          </li>
+          <li>
+            <p>
+              Polichinelos por 1 minuto.
+            </p>
+          </li>
+          <li>
+            <p>
+              Alongamento de pescoço e ombros para aliviar a tensão.
+            </p>
+          </li>
+        </ul>
+        <p>
+          Não espere tempo livre para se movimentar. Escolha um micro-hábito para começar hoje e sinta a
+          diferença na sua energia! Pequenas ações somadas todos os dias geram grandes resultados.
+        </p>
+      </div>
+      <div>
+        <img src="../Imagens/img_Artigos/Mulher_se_alongando.png" alt="Imagem de uma menina alongando">
+      </div>
+    </section>
+    <section class="referencia">
+      <h3>
+        Referências:
+      </h3>
+      <ul>
+        <li>
+          <a href="https://acsm.org/education-resources/trending-topics-resources/physical-activity-guidelines/">American
+            College of Sports Medicine - Physical Activity Guidelines</a>
+        </li>
+        <li>
+          <a href="https://www.mayoclinic.org/healthy-lifestyle/fitness/in-depth/exercise/art-20048389">Mayo
+            Clinic - Exercise 7 benefits of regular physical activity</a>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <div>
+      <div class="logo">
+        <a href="/FitlyApp/">
+          <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background" />
+          <h2>Fitly</h2>
+        </a>
+        <p>
+          Sua jornada para uma vida mais tranquila <br />
+          começa aqui.<br />
+          Encontre treinos, dicas e muito mais!
+        </p>
+        <ul>
+          <li>
+            <a target="_blank" href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"></span></a>
+          </li>
+          <li>
+            <a target="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
+          </li>
+          <li>
+            <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
+          </li>
+        </ul>
+      </div>
+      <div class="mapSite">
+        <h2>Indice</h2>
         <ul>
           <li>
             <a href="/FitlyApp/">Início</a>
           </li>
           <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
+            <a href="/FitlyApp/Sobre-o-projeto/"> Nosso projeto </a>
           </li>
           <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+            <a href="/FitlyApp/Artigos/">Artigos</a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Referencias/">Referências</a>
           </li>
         </ul>
-      </nav>
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
       </div>
-    </header>
-    <main>
-        <section class="introdução">
-            <h2>
-                Micro-hábitos de atividade física que transformam o dia sem precisar
-                de academia
-            </h2>
-            <p>
-                Muita gente pensa que para ser saudável precisa passar horas na
-                academia, mas isso não é verdade! Pequenos movimentos distribuídos ao
-                longo do dia que têm um efeito gigante na sua saúde, disposiçaõ e
-                humor. Vamos aprender como os micro-hábitos podem mudar sua vida?
-            </p>
-        </section>
-        <section class="explicação">
-            <h3>O que são micro-hábitos?</h3>
-            <p>
-                São pequenas ações que, quando feitas com frequência, trazem
-                benefícios acumulativos. O segredo é <span>constância</span>, não a
-                intensidade.
-            </p>
-            <div class="Exemplos">
-                <div>
-                    <h3>Exemplos práticos para incluir no dia a dia</h3>
-                    <ul>
-                        <li>
-                            Suba escada ao invés do elevador.
-                        </li>
-                        <li>
-                            Caminhe 10 minutos depois das refeições.
-                        </li>
-                        <li>
-                            Levante-se a cada hora para alongar os braços e as pernas.
-                        </li>
-                        <li>
-                            Faça 10 agachamentos ou flexões entre as tarefas
-                        </li>
-                    </ul>
-                </div>
-                <p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/f-9mR5ylwcE?si=RqBp8bXeHXaWtHmV"
-                        style="border: 0;"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                    </iframe>
-                </p>
-            </div>
-        </section>
-        <section class="motivo">
-            <h3>
-                Por que isso funciona?
-            </h3>
-            <p>
-                Pequenas pausas ativas aumentam o gasto calórico, melhoram a circulação, reduzem dores musculares e
-                mantém o metabolismo ativo.
-            </p>
-            <p class="dica-extra">
-                <span>Dica extra:</span> Coloque alarmes no celular para lembrar de se movimentar a cada hora.
-            </p>
-        </section>
-        <section class="exercicio">
-            <div>
-                <h3>
-                    Exercícios fáceis para casa ou trabalho:
-                </h3>
-                <ul>
-                    <li>
-                        Agachamentos (3 séries de 10).
-                    </li>
-                    <li>
-                        Polichinelos por 1 minuto.
-                    </li>
-                    <li>
-                        Alongamento de pescoço e ombros para aliviar a tensão.
-                    </li>
-                </ul>
-                <p>
-                    Não espere tempo livre para se movimentar. Escolha um micro-hábito para começar hoje e sinta a
-                    diferença na sua energia! Pequenas ações somadas todos os dias geram grandes resultados.
-                </p>
-            </div>
-            <div>
-                <img src="../Imagens/img_Artigos/Mulher_se_alongando.png" alt="Imagem de uma menina alongando">
-            </div>
-        </section>
-        <section class="referencia">
-            <h3>
-                Referências:
-            </h3>
-            <ul>
-                <li>
-                    <a
-                        href="https://acsm.org/education-resources/trending-topics-resources/physical-activity-guidelines/">American
-                        College of Sports Medicine - Physical Activity Guidelines</a>
-                </li>
-                <li>
-                    <a href="https://www.mayoclinic.org/healthy-lifestyle/fitness/in-depth/exercise/art-20048389">Mayo
-                        Clinic - Exercise 7 benefits of regular physical activity</a>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-      <div>
-        <div class="logo">
-          <a href="/FitlyApp/">
-            <img
-              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
-              alt="Fitly_background"
-            />
-            <h2>Fitly</h2>
-          </a>
-          <p>
-            Sua jornada para uma vida mais tranquila <br />
-            começa aqui.<br />
-            Encontre treinos, dicas e muito mais!
-          </p>
-          <ul>
-            <li>
-              <a target="_blank" href="https://instagram.com/app.fitly"
-                ><span class="fa-brands fa-instagram"></span
-              ></a>
-            </li>
-            <li>
-              <a target="_blank" href="https://tiktok.com/@app.fitly"
-                ><span class="fa-brands fa-tiktok"></span
-              ></a>
-            </li>
-            <li>
-              <a target="_blank" href="https://x.com/app_fitly"
-                ><span class="fa-brands fa-twitter"></span
-              ></a>
-            </li>
-          </ul>
-        </div>
-        <div class="mapSite">
-          <h2>Indice</h2>
-          <ul>
-            <li>
-              <a href="/FitlyApp/">Início</a>
-            </li>
-            <li>
-              <a href="/FitlyApp/Sobre-o-projeto/"> Nosso projeto </a>
-            </li>
-            <li>
-              <a href="/FitlyApp/Artigos/">Artigos</a>
-            </li>
-            <li>
-              <a href="/FitlyApp/Referencias/">Referências</a>
-            </li>
-          </ul>
-        </div>
-        <div class="contact">
-          <h2>Contato</h2>
-          <p>Tem alguma dúvida? Nos contate!</p>
-          <p class="email">Fitlyapp1@gmail.com</p>
-          <p>
-            Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
-            Federal Catarinense
-          </p>
-        </div>
+      <div class="contact">
+        <h2>Contato</h2>
+        <p>Tem alguma dúvida? Nos contate!</p>
+        <p class="email">Fitlyapp1@gmail.com</p>
+        <p>
+          Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
+          Federal Catarinense
+        </p>
       </div>
-      <div class="direitos">
-        <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
-      </div>
-    </footer>
-    <script src="/FitlyApp\Base\script.js"></script>
+    </div>
+    <div class="direitos">
+      <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+  <script src="/FitlyApp\Base\script.js"></script>
+  <script>
+        let eClaro = true;
+        const raiz = document.documentElement;
+        let luaImg = document.getElementById('lua');
+        let solImg = document.getElementById("sol");
+        let botaoNoturno = document.getElementById('btn');
+        let dicaExtra = document.getElementById('dica-extra');
+        botaoNoturno.addEventListener("click", function () {
+            if (eClaro) {
+                raiz.style.setProperty('--color-background', '#1D201F');
+                raiz.style.setProperty('--color-text', 'white');
+                luaImg.style.display = "none";
+                solImg.style.display = "block";
+                dicaExtra.style.backgroundColor = "#0a0908";
+                eClaro = false;
+            } else {
+                raiz.style.setProperty('--color-background', '#f7f7f7');
+                raiz.style.setProperty('--color-text', '#000000');
+                luaImg.style.display = "block";
+                solImg.style.display = "none";
+                dicaExtra.style.backgroundColor = "#e6f5ff";
+                eClaro = true;
+            }
+        })
+    </script>
 </body>
 
 </html>
