--- a/FitlyApp/Artigos/index.html
+++ b/FitlyApp/Artigos/index.html
@@ -19,6 +19,10 @@
         <a href="/FitlyApp"><h2>Fitly</h2></a>
       </h1>
       <nav class="nav-menu">
+      <button id="btn">
+        <span class="fa-solid fa-moon" id="lua"></span>
+        <span class="fa-solid fa-sun" id="sol"></span>
+      </button>
         <ul>
           <li>
             <a href="/FitlyApp/">Início</a>
@@ -192,6 +196,7 @@
       </div>
     </footer>
     <script src="/FitlyApp\Base\script.js"></script>
+
     <script>
       let eClaro = true;
       const raiz = document.documentElement;
