--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sobre o Projeto</title>
-  <link rel="stylesheet" href="css/sobreProjeto.css">
-  <link rel="stylesheet" href="/FitlyApp/Base/base.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <link rel="stylesheet" href="/FitlyApp/Base/base.css">
+  <link rel="stylesheet" href="css/sobreProjeto.css">
 </head>
 
 <body>
@@ -47,8 +47,10 @@
     </section>
 
     <section class="colaboradores">
+      <div class="h2">
+        <p>Colaboradores do projeto</p>
+      </div>
 
-      <h2>Colaboradores do projeto</h2>
       <ul class="unico">
         <li class="unit">
           <strong>Bruna Ignácio Bernardes: </strong>
@@ -63,7 +65,6 @@
       </ul>   
 
       <ul class="colab">
-
             <li>
               <strong>Igor Marcon Michels:</strong>
               <p>
