Início Responsividade Página Inicial

--- a/FitlyApp/index.html
+++ b/FitlyApp/index.html
@@ -69,7 +69,7 @@
         </div>
       </section>
       <section id="plataforma" class="plataforma">
-        <img src="Imagens/mockups/Home-portrait.png" alt="FitlyApp" />
+        <img src="Imagens/mockups/Home-portrait.png" class="pc" alt="FitlyApp" />
         <h2>Nossa Plataforma</h2>
         <h4>
           A Fitly foi desenvolvida para ser a sua parceira na busca por uma vida
