--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -17,6 +17,10 @@
         <a href="/FitlyApp"><h2>Fitly</h2></a>
       </h1>
       <nav class="nav-menu">
+        <button id="btn">
+          <span class="fa-solid fa-moon" id="lua"></span>
+          <span class="fa-solid fa-sun" id="sol"></span>
+        </button>
         <ul>
           <li>
             <a href="/FitlyApp/">Início</a>
@@ -52,7 +56,7 @@
       </div>
 
       <ul class="unico">
-        <li class="unit">
+        <li class="unit" id="convidada">
           <strong>Bruna Ignácio Bernardes: </strong>
           <p class="txt">
              Formada em nutrição, trabalha atualmente com marketing, ajudou na
@@ -64,7 +68,7 @@
         </li>   
       </ul>   
 
-      <ul class="colab">
+      <ul class="colab" id="parti">
             <li>
               <strong>Igor Marcon Michels:</strong>
               <p>
@@ -121,14 +125,15 @@
             </li>
 
             <li>
-              <strong>Matheus Lacerda Maximiano:</strong> Criador da
+              <strong>Matheus Lacerda Maximiano:</strong> 
               <p class="txt">
-                organização, responsável por parte da pesquisa;
+                Criador da organização, responsável por parte da pesquisa;
               </p>
               <p>
                 <img class="imagem" src="../Imagens/Img_integrantes/AMatheus.jpg" alt="Matheus Maximiano Lacerda"/>
               </p>
             </li>
+
     </section>
   </main>
 </body>
@@ -197,6 +202,34 @@
       </div>
     </footer>
     <script src="/FitlyApp\Base\script.js"></script>
-
+    <script>
+      let eClaro = true;
+    const raiz = document.documentElement;
+    let luaImg = document.getElementById('lua');
+    let solImg = document.getElementById("sol");
+    let botaoNoturno = document.getElementById('btn');
+    let listaParticipantes = document.getElementById('parti').querySelectorAll('li');
+    botaoNoturno.addEventListener("click", function () {
+      if (eClaro) {
+        raiz.style.setProperty('--color-background', '#1D201F');
+        raiz.style.setProperty('--color-text', 'white');
+        eClaro = false;   
+        luaImg.style.display = "none";
+        solImg.style.display = "block";
+        for (const item of listaParticipantes) {
+          item.style.backgroundColor = "#1D201F"
+        }
+      }else {
+        raiz.style.setProperty('--color-background', '#f7f7f7');
+        raiz.style.setProperty('--color-text', '#0D1B2A');
+        luaImg.style.display = "block";
+        solImg.style.display = "none";
+        eClaro = true;
+        for (const item of listaParticipantes) {
+          item.style.backgroundColor = "#f7f7f7"
+        }
+      }
+    })
+    </script>
 
 </html>
