--- a/FitlyApp/atv-form-main/index.html
+++ b/FitlyApp/atv-form-main/index.html
@@ -8,47 +8,47 @@
   </head>
   <body>
     <main>
+
+
       <section class="pag1">
         <h1>Bem-Vindo(a)!</h1>
         <p>Para começar, qual é o seu nome?</p>
-
         <form action="#">
           <label>
-            <input type="text" placeholder="Digite seu nome aqui" />
+            <input type="text" placeholder="Digite seu nome aqui"/>
           </label>
         </form>
-
         <button type="button" onclick="vaiPagina2()">Próximo</button>
       </section>
-      <section class="pag2">
-        <h1><span></span>, você estuda no IFC?</h1>
 
+
+      <section class="pag2">
+        <h1><span>Fulano</span>, você estuda no IFC?</h1>
         <form action="#">
           <label> <input type="radio" name="estudante" value="1" />Sim</label>
           <label> <input type="radio" name="estudante" value="0" />Não </label>
         </form>
-
         <button type="button" onclick="vaiPagina3()">Próximo</button>
       </section>
+
 
       <section class="pag3">
         <h1>Qual turma você pertence?</h1>
         <form action="#">
           <label for="turma"> Turma </label>
-
           <select name="turma" id="turma">
             <option value="1">1INFO1</option>
             <option value="2">1INFO2</option>
             <option value="3">1INFO3</option>
           </select>
-
           <button type="button" onclick="vaiPagina4()">Próximo</button>
         </form>
       </section>
+
+
       <section class="pag4">
         <h1>Saudações, <span>Fulano!</span></h1>
-        <p>Você estuda na turma 1INFOX.</p>
-
+        <p>Você estuda na turma 1INFO<span>X</span>.</p>
         <button type="button">Continuar</button>
       </section>
     </main>
@@ -60,6 +60,7 @@
 
       let nome = "";
       let estudante = "";
+      let turma = "";
 
       const vaiPagina2 = () => {
         pag1.style.display = "none";
@@ -70,8 +71,8 @@
       };
 
       const vaiPagina3 = () => {
-        estudante = documen.querySelector(".pag2 input:checked");
         pag2.style.display = "none";
+        estudante = document.querySelector(".pag2 input").value
         if (estudante == 1) {
             pag3.style.display = "block";
         } else {
@@ -82,6 +83,8 @@
       const vaiPagina4 = () => {
         pag3.style.display = "none";
         pag4.style.display = "block";
+        turma = document.querySelector(".pag3 select").value
+        document.querySelector(".pag4 p span").innerHTML = turma;
       };
     </script>
   </body>
