Responsividade página inicial

--- a/FitlyApp/index.html
+++ b/FitlyApp/index.html
@@ -18,6 +18,7 @@
         const randImageIndex = ~~(Math.random() * images.length);
         document.getElementById("randImg").src = images[randImageIndex];
       });
+
     </script>
     <script
       src="https://kit.fontawesome.com/a1f8cb2104.js"
@@ -70,7 +71,7 @@
       </section>
       <section id="plataforma" class="plataforma">
         <img src="Imagens/mockups/Home-portrait.png" class="pc" alt="FitlyApp" />
-        <h2>Nossa Plataforma</h2>
+        <h2 class="plat">Nossa Plataforma</h2>
         <h4>
           A Fitly foi desenvolvida para ser a sua parceira na busca por uma vida
           mais saudável. Combinando <b>tecnologia e bem-estar,</b> nossa
