--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -52,13 +52,13 @@
 
     <section class="colaboradores">
       <div class="h2">
-        <p>Colaboradores do projeto</p>
+        <h2>Colaboradores do projeto</h2>
       </div>
 
-      <ul class="unico">
+      <div class="unico">
         <li class="unit" id="convidada">
           <strong>Bruna Ignácio Bernardes: </strong>
-          <p class="txt">
+          <p>
              Formada em nutrição, trabalha atualmente com marketing, ajudou na
             criação de vários artigos para o projeto.
           </p>
@@ -66,12 +66,12 @@
             <img src="/FitlyApp/Imagens/Img_integrantes/Bruna Ignácio Bernardes.jpg" alt="Bruna" class="imagem">
           </p>    
         </li>   
-      </ul>   
+      </div>   
 
       <ul class="colab" id="parti">
             <li>
               <strong>Igor Marcon Michels:</strong>
-              <p>
+              <p class="txt">
                  Líder do projeto,
                 responsável pela entrega das partes de cada um e coordenador das
                 funções de cada um;
@@ -104,7 +104,7 @@
             </li>
             <li>
               <strong>Victor Murilo Bernardes:</strong> 
-              <p>
+              <p class="txt">
               Secretário do projeto,
                 responsável pela descrição e desenvolvimento das atas de reunião;
               </p>
