--- a/FitlyApp/atv-form-main/index.html
+++ b/FitlyApp/atv-form-main/index.html
@@ -8,48 +8,166 @@
   </head>
   <body>
     <main>
-
-
       <section class="pag1">
-        <h1>Bem-Vindo(a)!</h1>
-        <p>Para começar, qual é o seu nome?</p>
+        <h1>Vamos começar!</h1>
+        <p>Nome, Idade e Gênero</p>
         <form action="#">
+          <h3>Nome</h3>
+          <label class="texto">
+            <input type="text" placeholder="Seu nome" required />
+          </label>
+          <h3>Idade</h3>
+          <label class="texto">
+            <input type="number" placeholder="Sua idade" required />
+          </label>
+          <h3>Sexo</h3>
           <label>
-            <input type="text" placeholder="Digite seu nome aqui"/>
+            <input type="radio" name="genero" value="1" required />Masculino
+          </label>
+          <label>
+            <input type="radio" name="genero" value="0" required />Feminino 
           </label>
         </form>
         <button type="button" onclick="vaiPagina2()">Próximo</button>
       </section>
 
-
       <section class="pag2">
-        <h1><span>Fulano</span>, você estuda no IFC?</h1>
+        <h1>Dados Corporais</h1>
+        <p>Altura e Peso</p>
         <form action="#">
-          <label> <input type="radio" name="estudante" value="1" />Sim</label>
-          <label> <input type="radio" name="estudante" value="0" />Não </label>
+          <h3>Qual sua altura? (cm)</h3>
+          <label class="texto">
+            <input type="number" placeholder="Ex: 175" required />
+          </label>
+          <h3>Qual seu peso? (kg)</h3>
+          <label class="texto">
+            <input type="number" placeholder="Ex: 70.5" required />
+          </label>
         </form>
         <button type="button" onclick="vaiPagina3()">Próximo</button>
       </section>
 
-
       <section class="pag3">
-        <h1>Qual turma você pertence?</h1>
+        <h1>Seu Estilo de Vida</h1>
+        <p>Nível de Atividade Física</p>
         <form action="#">
-          <label for="turma"> Turma </label>
-          <select name="turma" id="turma">
-            <option value="1">1INFO1</option>
-            <option value="2">1INFO2</option>
-            <option value="3">1INFO3</option>
-          </select>
-          <button type="button" onclick="vaiPagina4()">Próximo</button>
+          <h3>Com que frequência você se exercita?</h3>
+          <label>
+            <input type="radio" name="frequencia" value="1" required />Sedentário
+          </label>
+          <label>
+            <input type="radio" name="frequencia" value="2" required />Levemente Ativo (1-3 dias/semana)
+          </label>
+          <label>
+            <input type="radio" name="frequencia" value="3" required />Moderadamente Ativo (3-5 dias/semana)
+          </label>
+          <label>
+            <input type="radio" name="frequencia" value="4" required />Muito Ativo (6-7 dias/semana)
+          </label>
         </form>
+        <button type="button" onclick="vaiPagina4()">Próximo</button>
       </section>
 
-
       <section class="pag4">
-        <h1>Saudações, <span>Fulano!</span></h1>
-        <p>Você estuda na turma 1INFO<span>X</span>.</p>
-        <button type="button">Continuar</button>
+        <h1>Sua Meta</h1>
+        <p>Qual é o seu principal objetivo?</p>
+        <form action="#">
+          <h3>Selecione uma das opções abaixo:</h3>
+          <label>
+            <input type="radio" name="meta" value="1" required />Perder Gordura (Emagrecer)
+          </label>
+          <label>
+            <input type="radio" name="meta" value="2" required />Manter o Peso (Mais saúde e disposição)
+          </label>
+          <label>
+            <input type="radio" name="meta" value="3" required />Ganhar Massa Muscular (Hipertrofia)
+          </label>
+        </form>
+        <button type="button" onclick="vaiPagina5()">Próximo</button>
+      </section>
+
+      <section class="pag5">
+        <h1>Flexibilidade</h1>
+        <p>Hábitos de Fim de Semana</p>
+        <form action="#">
+          <h3>Você costuma comer um pouco mais nos finais de semana?</h3>
+          <label>
+            <input type="radio" name="Flexibilidade" value="1" required />Não, tenho uma rotina consistente
+          </label>
+          <label>
+            <input type="radio" name="Flexibilidade" value="2" required />Sim, no Sábado e Domingo
+          </label>
+          <label>
+            <input type="radio" name="Flexibilidade" value="3" required />Sim, apenas no Sábado
+          </label>
+          <label>
+            <input type="radio" name="Flexibilidade" value="4" required />Sim, na Sexta, Sábado e Domingo
+          </label>
+        </form>
+        <button type="button" onclick="vaiPagina6()">Próximo</button>
+      </section>
+
+      <section class="pag6">
+        <h1>Preferências</h1>
+        <p>Conte-nos mais sobre sua dieta</p>
+        <form action="#">
+          <h3>Você segue algum tipo de dieta específica?</h3>
+          <label>
+            <input type="radio" name="preferencias" value="1" required />Nenhuma específica (Onívoro)
+          </label>
+          <label>
+            <input type="radio" name="preferencias" value="2" required />Vegetariana
+          </label>
+          <label>
+            <input type="radio" name="preferencias" value="3" required />Vegana
+          </label>
+        </form>
+        <button type="button" onclick="vaiPagina7()">Próximo</button>
+      </section>
+
+      <section class="pag7">
+        <h1>Sua Motivação</h1>
+        <p>Entender seu 'porquê' nos ajuda a te apoiar</p>
+        <form action="#">
+          <h3>O que mais te motiva a alcançar seu objetivo?</h3>
+          <label>
+            <input type="radio" name="motivacao" value="1" required />Melhorar a saúde e bem-estar
+          </label>
+          <label>
+            <input type="radio" name="motivacao" value="2" required />Estética e autoconfiança
+          </label>
+          <label>
+            <input type="radio" name="motivacao" value="3" required />Mais energia e disposição
+          </label>
+        </form>
+        <button type="button" onclick="vaiPagina8()">Próximo</button>
+      </section>
+
+      <section class="pag8">
+        <h1>Considerações Finais</h1>
+        <p>Informações de Saúde</p>
+        <form action="#">
+          <h3>Você possui alguma condição médica, lesão ou restrição alimentar importante?</h3>
+          <label>
+            <input type="radio" name="saude" value="1" required />Sim
+          </label>
+          <label>
+            <input type="radio" name="saude" value="2" required />Não
+          </label>
+        </form>
+        <button type="button" onclick="vaiPagina9()">Próximo</button>
+      </section>
+
+      <section class="pag9">
+        <h1>Seu Plano Personalizado</h1>
+        <p>Este é o seu ponto de partida</p>
+        <ul>
+          <li>
+            <p>Sua meta diária (dias de semana) é de:</p>
+            <p><strong>2116</strong></p>
+            <p>kcal</p>
+          </li>
+        </ul>
       </section>
     </main>
     <script>
@@ -57,6 +175,11 @@
       const pag2 = document.querySelector("section.pag2");
       const pag3 = document.querySelector("section.pag3");
       const pag4 = document.querySelector("section.pag4");
+      const pag5 = document.querySelector("section.pag5");
+      const pag6 = document.querySelector("section.pag6");
+      const pag7 = document.querySelector("section.pag7");
+      const pag8 = document.querySelector("section.pag8");
+      const pag9 = document.querySelector("section.pag9");
 
       let nome = "";
       let estudante = "";
@@ -72,19 +195,35 @@
 
       const vaiPagina3 = () => {
         pag2.style.display = "none";
-        estudante = document.querySelector(".pag2 input").value
-        if (estudante == 1) {
-            pag3.style.display = "block";
-        } else {
-            pag4.style.display = "block";
-        }
+        estudante = document.querySelector(".pag2 input").value;
+        pag3.style.display = "block"; 
       };
 
       const vaiPagina4 = () => {
         pag3.style.display = "none";
         pag4.style.display = "block";
-        turma = document.querySelector(".pag3 select").value
+        turma = document.querySelector(".pag3 select").value;
         document.querySelector(".pag4 p span").innerHTML = turma;
+      };
+      const vaiPagina5 = () => {
+        pag4.style.display = "none";
+        pag5.style.display = "block";
+      };
+      const vaiPagina6 = () => {
+        pag5.style.display = "none";
+        pag6.style.display = "block";
+      };
+      const vaiPagina7 = () => {
+        pag6.style.display = "none";
+        pag7.style.display = "block";
+      };
+      const vaiPagina8 = () => {
+        pag7.style.display = "none";
+        pag8.style.display = "block";
+      };
+      const vaiPagina9 = () => {
+        pag8.style.display = "none";
+        pag9.style.display = "block";
       };
     </script>
   </body>
