--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitly</title>
-    <link rel="stylesheet" href="FitlyApp/Base/style.css?v=1" />
     <link rel="stylesheet" href="FitlyApp/Base/base.css" />
-    <link rel="icon" href="/Imagens/logos/FitlyLogo.png" />
+    <link rel="stylesheet" href="FitlyApp/Base/style.css">
     <script>
       const images = [
         "FitlyApp/Imagens/img_pag-inicial/ambitious-studio-rick-barrett-03b61PY89hs-unsplash.jpg",
@@ -19,12 +18,14 @@
         const randImageIndex = ~~(Math.random() * images.length);
         document.getElementById("randImg").src = images[randImageIndex];
       });
+
     </script>
     <script
       src="https://kit.fontawesome.com/a1f8cb2104.js"
       crossorigin="anonymous"
     ></script>
   </head>
+
   <body>
     <header>
       <h1 class="logo">
@@ -32,6 +33,10 @@
         <a href="/FitlyApp"><h2>Fitly</h2></a>
       </h1>
       <nav class="nav-menu">
+     <button id="btn">
+        <span class="fa-solid fa-moon" id="lua"></span>
+        <span class="fa-solid fa-sun" id="sol"></span>
+      </button>
         <ul>
           <li>
             <a href="#inicio">Início</a>
@@ -40,10 +45,10 @@
             <a href="#plataforma">Nossa Plataforma</a>
           </li>
           <li>
-            <a href="/Sobre-o-projeto/">Sobre o projeto</a>
+            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o projeto</a>
           </li>
           <li>
-            <a class="contato" href="/FitlyApp/Artigos/index.html">Artigos</a>
+            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
           </li>
         </ul>
       </nav>
@@ -65,8 +70,8 @@
         </div>
       </section>
       <section id="plataforma" class="plataforma">
-        <img src="FitlyApp/Imagens/mockups/Home-portrait.png" alt="FitlyApp" />
-        <h2>Nossa Plataforma</h2>
+        <img src="FitlyApp/Imagens/mockups/Home-portrait.png" class="pc" alt="FitlyApp" />
+        <h2 class="plat">Nossa Plataforma</h2>
         <h4>
           A Fitly foi desenvolvida para ser a sua parceira na busca por uma vida
           mais saudável. Combinando <b>tecnologia e bem-estar,</b> nossa
@@ -136,7 +141,7 @@
         <div class="logo">
           <a href="/FitlyApp/">
             <img
-              src="FitlyApp/Imagens/logos/logoFitlySemTexto.png"
+              src="Imagens/logos/logoFitlySemTexto.png"
               alt="Fitly_background"
             />
             <h2>Fitly</h2>
@@ -195,6 +200,28 @@
         <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
       </div>
     </footer>
-    <script src="/FitlyApp/Base/script.js"></script>
+    <script src="Base/script.js"></script>
+
+    <script>
+      let eClaro = true;
+    const raiz = document.documentElement;
+    let luaImg = document.getElementById('lua');
+    let solImg = document.getElementById("sol");let botaoNoturno = document.getElementById('btn');
+    botaoNoturno.addEventListener("click", function () {
+      if (eClaro) {
+        raiz.style.setProperty('--color-background', '#1D201F');
+        raiz.style.setProperty('--color-text', 'white');
+        eClaro = false;   
+        luaImg.style.display = "none";
+        solImg.style.display = "block";
+      }else {
+        raiz.style.setProperty('--color-background', '#f7f7f7');
+        raiz.style.setProperty('--color-text', '#0D1B2A');
+        luaImg.style.display = "block";
+        solImg.style.display = "none";
+        eClaro = true;
+      }
+    })
+    </script>
   </body>
 </html>
