Não sei o que eu fiz, mas tô commitando

--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -74,7 +74,7 @@
               <p class="txt">
                  Líder do projeto,
                 responsável pela entrega das partes de cada um e coordenador das
-                funções de cada um;
+                funções de cada um.
               </p>
               <p>
                 <img class="imagem" src="../Imagens/Img_integrantes/AIgor.jpg" alt="Igor Michels"/>
@@ -96,7 +96,7 @@
               <strong>Victor Feliciano:</strong>
               <p class="txt">
                  Responsável pela as funcionalidades do
-                site, como login e outros cálculos com dados informados pelo usuário;
+                site, como login e outros cálculos com dados informados pelo usuário.
               </p>
                 <p>
                 <img class="imagem" src="../Imagens/Img_integrantes/AFeliciano.jpg" alt="Victor Murilo"/>
