--- a/FitlyApp/atv-form-main/index.html
+++ b/FitlyApp/atv-form-main/index.html
@@ -40,11 +40,11 @@
         <form action="#">
           <label class="texto">
             <h3>Qual sua altura? (cm)</h3>
-            <input type="number" placeholder="Ex: 175" required />
+            <input type="number" placeholder="Ex: 175" id="altura" required/>
           </label>
           <label class="texto">
             <h3>Qual seu peso? (kg)</h3>
-            <input type="number" placeholder="Ex: 70.5" required />
+            <input type="number" placeholder="Ex: 70.5" id="peso" required />
           </label>
         </form>
         <button type="button" onclick="vaiPagina3()">Próximo</button>
@@ -80,7 +80,7 @@
             <input type="radio" name="meta" value="1" required />Perder Gordura (Emagrecer)
           </label>
           <label>
-            <input type="radio" name="meta" value="2" required />Manter o Peso (Mais saúde e disposição)
+            <input type="radio" name="meta" value="2" required />Manter o peso (Mais saúde e disposição)
           </label>
           <label>
             <input type="radio" name="meta" value="3" required />Ganhar Massa Muscular (Hipertrofia)
@@ -119,7 +119,7 @@
             <input type="radio" name="preferencias" value="1" required />Nenhuma específica (Onívoro)
           </label>
           <label>
-            <input type="radio" name="preferencias" value="2" required />Vegetariana
+            <input type="radio" name="preferencias" value="2"  required />Vegetariana
           </label>
           <label>
             <input type="radio" name="preferencias" value="3" required />Vegana
