Correção de erros

--- a/FitlyApp/Referencias/index.html
+++ b/FitlyApp/Referencias/index.html
@@ -17,7 +17,7 @@
      <header>
       <h1 class="logo">
         <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
+        <a href="/FitlyApp">Fitly</a>
       </h1>
       <nav class="nav-menu">
         <ul>
@@ -207,6 +207,6 @@
         <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
       </div>
     </footer>
-    <script src="/FitlyApp\Base\script.js"></script>
+    <script src="/FitlyApp/Base/script.js"></script>
   </body>
 </html>
