--- a/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
+++ b/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
@@ -16,7 +16,7 @@
     <header>
       <h1 class="logo">
         <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
+        <a href="/FitlyApp">Fitly</a>
       </h1>
       <nav class="nav-menu">
           <button id="btn">
@@ -216,7 +216,7 @@
         <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
       </div>
     </footer>
-    <script src="/FitlyApp\Base\script.js"></script>
+    <script src="/FitlyApp/Base/script.js"></script>
       
   <script>
     let eClaro = true;
