--- a/FitlyApp/Artigos/MicroHabitos.html
+++ b/FitlyApp/Artigos/MicroHabitos.html
@@ -15,7 +15,7 @@
     <h1 class="logo">
       <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
       <a href="/FitlyApp">
-        <h2>Fitly</h2>
+        Fitly
       </a>
     </h1>
     <nav class="nav-menu">
@@ -210,7 +210,7 @@
       <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
     </div>
   </footer>
-  <script src="/FitlyApp\Base\script.js"></script>
+  <script src="/FitlyApp/Base/script.js"></script>
   <script>
         let eClaro = true;
         const raiz = document.documentElement;
