--- a/FitlyApp/Artigos/OrganizaçãoAlimentar.html
+++ b/FitlyApp/Artigos/OrganizaçãoAlimentar.html
@@ -16,7 +16,7 @@
     <header>
       <h1 class="logo">
         <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
+        <a href="/FitlyApp">Fitly</a>
       </h1>
       <nav class="nav-menu">
          <button id="btn">
@@ -264,7 +264,7 @@
             </p>
         </div>
     </footer>
-    <script src="/FitlyApp\Base\script.js"></script>
+    <script src="/FitlyApp/Base/script.js"></script>
     
     <script>
         let eClaro = true;
