--- a/FitlyApp/Artigos/alimentacaoEquilibrada.html
+++ b/FitlyApp/Artigos/alimentacaoEquilibrada.html
@@ -12,33 +12,35 @@
 
 <body>
   <header>
-      <h1 class="logo">
-        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
-      </h1>
-      <nav class="nav-menu">  
+    <h1 class="logo">
+      <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
+      <a href="/FitlyApp">
+        Fitly
+      </a>
+    </h1>
+    <nav class="nav-menu">
       <button id="btn">
         <span class="fa-solid fa-moon" id="lua"></span>
         <span class="fa-solid fa-sun" id="sol"></span>
       </button>
-        <ul>
-          <li>
-            <a href="/FitlyApp/">Início</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
-          </li>
-          <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </header>
+      <ul>
+        <li>
+          <a href="/FitlyApp/">Início</a>
+        </li>
+        <li>
+          <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
+        </li>
+        <li>
+          <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="hamburger">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+  </header>
 
   <main>
     <section class="introduction">
@@ -175,72 +177,62 @@
     </section>
   </main>
 
-    <footer>
-      <div>
-        <div class="logo">
-          <a href="/FitlyApp/">
-            <img
-              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
-              alt="Fitly_background"
-            />
-            <h2>Fitly</h2>
-          </a>
-          <p>
-            Sua jornada para uma vida mais tranquila <br />
-            começa aqui.<br />
-            Encontre treinos, dicas e muito mais!
-          </p>
-          <ul>
-            <li>
-              <a target="_blank" href="https://instagram.com/app.fitly"
-                ><span class="fa-brands fa-instagram"></span
-              ></a>
-            </li>
-            <li>
-              <a target="_blank" href="https://tiktok.com/@app.fitly"
-                ><span class="fa-brands fa-tiktok"></span
-              ></a>
-            </li>
-            <li>
-              <a target="_blank" href="https://x.com/app_fitly"
-                ><span class="fa-brands fa-twitter"></span
-              ></a>
-            </li>
-          </ul>
-        </div>
-        <div class="mapSite">
-          <h2>Indice</h2>
-          <ul>
-            <li>
-              <a href="/FitlyApp/">Início</a>
-            </li>
-            <li>
-              <a href="/FitlyApp/Sobre-o-projeto/"> Nosso projeto </a>
-            </li>
-            <li>
-              <a href="/FitlyApp/Artigos/">Artigos</a>
-            </li>
-            <li>
-              <a href="/FitlyApp/Referencias/">Referências</a>
-            </li>
-          </ul>
-        </div>
-        <div class="contact">
-          <h2>Contato</h2>
-          <p>Tem alguma dúvida? Nos contate!</p>
-          <p class="email">Fitlyapp1@gmail.com</p>
-          <p>
-            Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
-            Federal Catarinense
-          </p>
-        </div>
+  <footer>
+    <div>
+      <div class="logo">
+        <a href="/FitlyApp/">
+          <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background" />
+          <h2>Fitly</h2>
+        </a>
+        <p>
+          Sua jornada para uma vida mais tranquila <br />
+          começa aqui.<br />
+          Encontre treinos, dicas e muito mais!
+        </p>
+        <ul>
+          <li>
+            <a target="_blank" href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"></span></a>
+          </li>
+          <li>
+            <a target="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
+          </li>
+          <li>
+            <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
+          </li>
+        </ul>
       </div>
-      <div class="direitos">
-        <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
+      <div class="mapSite">
+        <h2>Indice</h2>
+        <ul>
+          <li>
+            <a href="/FitlyApp/">Início</a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Sobre-o-projeto/"> Nosso projeto </a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Artigos/">Artigos</a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Referencias/">Referências</a>
+          </li>
+        </ul>
       </div>
-    </footer>
-    <script src="/FitlyApp\Base\script.js"></script>    
-</body>
+      <div class="contact">
+        <h2>Contato</h2>
+        <p>Tem alguma dúvida? Nos contate!</p>
+        <p class="email">Fitlyapp1@gmail.com</p>
+        <p>
+          Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
+          Federal Catarinense
+        </p>
+      </div>
+    </div>
+    <div class="direitos">
+      <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+  <script src="/FitlyApp\Base\script.js"></script>
 
   <script>
     let eClaro = true;
@@ -273,6 +265,9 @@
       }
     })
   </script>
+</body>
+
+
 
 
 </html>
