--- a/FitlyApp/Artigos/index.html
+++ b/FitlyApp/Artigos/index.html
@@ -16,7 +16,7 @@
     <header>
       <h1 class="logo">
         <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
+        <a href="/FitlyApp">Fitly</a>
       </h1>
       <nav class="nav-menu">
       <button id="btn">
@@ -51,7 +51,7 @@
             <div class="tudo">
               <a href="alimentacaoEquilibrada.html">
                 <img
-                  src="/FitlyApp\Imagens\img_Artigos\img alimentacao-equilibrada\fresh-fruits-2305192_1280 1.png"
+                  src="/FitlyApp/Imagens/img_Artigos/img alimentacao-equilibrada/fresh-fruits-2305192_1280 1.png"
                   alt="img"
                 />
               </a>
@@ -195,7 +195,7 @@
         <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
       </div>
     </footer>
-    <script src="/FitlyApp\Base\script.js"></script>
+    <script src="/FitlyApp/Base/script.js"></script>
 
     <script>
       let eClaro = true;
