--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -11,39 +11,41 @@
 </head>
 
 <body>
- <header>
-      <h1 class="logo">
-        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
-      </h1>
-      <nav class="nav-menu">
-        <button id="btn">
-          <span class="fa-solid fa-moon" id="lua"></span>
-          <span class="fa-solid fa-sun" id="sol"></span>
-        </button>
-        <ul>
-          <li>
-            <a href="/FitlyApp/">Início</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
-          </li>
-          <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </header>
+  <header>
+    <h1 class="logo">
+      <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
+      <a href="/FitlyApp">
+        Fitly
+      </a>
+    </h1>
+    <nav class="nav-menu">
+      <button id="btn">
+        <span class="fa-solid fa-moon" id="lua"></span>
+        <span class="fa-solid fa-sun" id="sol"></span>
+      </button>
+      <ul>
+        <li>
+          <a href="/FitlyApp/">Início</a>
+        </li>
+        <li>
+          <a href="/FitlyApp/Sobre-o-projeto/">Sobre o Projeto</a>
+        </li>
+        <li>
+          <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="hamburger">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+  </header>
 
   <main>
     <section id="banner">
       <div class="IMG">
-        <img src="/FitlyApp\Imagens\img_banners\charlesdeluvio-Lks7vei-eAg-unsplash.jpg" alt="Banner" />
+        <img src="/FitlyApp/Imagens/img_banners/charlesdeluvio-Lks7vei-eAg-unsplash.jpg" alt="Banner" />
         <div class="banner">
           <h1>Sobre o Projeto</h1>
         </div>
@@ -59,151 +61,143 @@
         <div class="unit" id="convidada">
           <strong>Bruna Ignácio Bernardes: </strong>
           <p>
-             Formada em nutrição, trabalha atualmente com marketing, ajudou na
+            Formada em nutrição, trabalha atualmente com marketing, ajudou na
             criação de vários artigos para o projeto.
           </p>
           <p>
-            <img src="/FitlyApp/Imagens/Img_integrantes/Bruna Ignácio Bernardes.jpg" alt="Bruna" class="imagem">
-          </p> 
-          </div>
-      </div>   
+            <img src="/FitlyApp/Imagens/Img_integrantes/Bruna%20Ignácio%20Bernardes.jpg" alt="Bruna" class="imagem">
+          </p>
+        </div>
+      </div>
 
       <ul class="colab" id="parti">
-            <li>
-              <strong>Igor Marcon Michels:</strong>
-              <p class="txt">
-                 Líder do projeto,
-                responsável pela entrega das partes de cada um e coordenador das
-                funções de cada um.
-              </p>
-              <p>
-                <img class="imagem" src="../Imagens/Img_integrantes/AIgor.jpg" alt="Igor Michels"/>
-              </p>
-            </li>
-            <li>
-              <strong>Pedro José Oliveira da Roza:</strong>
-              <p class="txt">
-              Responsável pela
-                pesquisa e auxiliar no desenvolvimento das partes estáticas do
-                site.
-              </p>
-              <p>
-                <img class="imagem" src="../Imagens/Img_integrantes/APedro.jpg" alt="Pedro josé"/>
-              </p>
-            </li>
+        <li>
+          <strong>Igor Marcon Michels:</strong>
+          <p class="txt">
+            Líder do projeto,
+            responsável pela entrega das partes de cada um e coordenador das
+            funções de cada um.
+          </p>
+          <p>
+            <img class="imagem" src="../Imagens/Img_integrantes/AIgor.jpg" alt="Igor Michels" />
+          </p>
+        </li>
+        <li>
+          <strong>Pedro José Oliveira da Roza:</strong>
+          <p class="txt">
+            Responsável pela
+            pesquisa e auxiliar no desenvolvimento das partes estáticas do
+            site.
+          </p>
+          <p>
+            <img class="imagem" src="../Imagens/Img_integrantes/APedro.jpg" alt="Pedro josé" />
+          </p>
+        </li>
 
-            <li>
-              <strong>Victor Feliciano:</strong>
-              <p class="txt">
-                 Responsável pela as funcionalidades do
-                site, como login e outros cálculos com dados informados pelo usuário.
-              </p>
-                <p>
-                <img class="imagem" src="../Imagens/Img_integrantes/AFeliciano.jpg" alt="Victor Murilo"/>
-              </p>
-            </li>
-            <li>
-              <strong>Victor Murilo Bernardes:</strong> 
-              <p class="txt">
-              Secretário do projeto,
-                responsável pela descrição e desenvolvimento das atas de reunião;
-              </p>
-                <p>
-                <img class="imagem" src="../Imagens/Img_integrantes/AVictor Murilo.jpg" alt="Victor Murilo"/>
-              </p>
-            </li>
+        <li>
+          <strong>Victor Feliciano:</strong>
+          <p class="txt">
+            Responsável pela as funcionalidades do
+            site, como login e outros cálculos com dados informados pelo usuário.
+          </p>
+          <p>
+            <img class="imagem" src="../Imagens/Img_integrantes/AFeliciano.jpg" alt="Victor Murilo" />
+          </p>
+        </li>
+        <li>
+          <strong>Victor Murilo Bernardes:</strong>
+          <p class="txt">
+            Secretário do projeto,
+            responsável pela descrição e desenvolvimento das atas de reunião;
+          </p>
+          <p>
+            <img class="imagem" src="../Imagens/Img_integrantes/AVictor%20Murilo.jpg" alt="Victor Murilo" />
+          </p>
+        </li>
 
-            <li>
-              <strong>Kaue Teixeira:</strong>
-              <p class="txt">
-               Responsável por programar as
-                partes estáticas do site, além de auxiliar na pesquisa;
-              </p>
-              <p>
-                <img class="imagem" src="../Imagens/Img_integrantes/AKaue.jpg" alt="Kaue Teixeira"/>
-              </p>
-            </li>
+        <li>
+          <strong>Kaue Teixeira:</strong>
+          <p class="txt">
+            Responsável por programar as
+            partes estáticas do site, além de auxiliar na pesquisa;
+          </p>
+          <p>
+            <img class="imagem" src="../Imagens/Img_integrantes/AKaue.jpg" alt="Kaue Teixeira" />
+          </p>
+        </li>
 
-            <li>
-              <strong>Matheus Lacerda Maximiano:</strong> 
-              <p class="txt">
-                Criador da organização, responsável por parte da pesquisa;
-              </p>
-              <p>
-                <img class="imagem" src="../Imagens/Img_integrantes/AMatheus.jpg" alt="Matheus Maximiano Lacerda"/>
-              </p>
-            </li>
+        <li>
+          <strong>Matheus Lacerda Maximiano:</strong>
+          <p class="txt">
+            Criador da organização, responsável por parte da pesquisa;
+          </p>
+          <p>
+            <img class="imagem" src="../Imagens/Img_integrantes/AMatheus.jpg" alt="Matheus Maximiano Lacerda" />
+          </p>
+        </li>
+
+      </ul>
 
     </section>
   </main>
-</body>
-    <footer>
-      <div>
-        <div class="logo">
-          <a href="/FitlyApp/">
-            <img
-              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
-              alt="Fitly_background"
-            />
-            <h2>Fitly</h2>
-          </a>
-          <p>
-            Sua jornada para uma vida mais tranquila <br />
-            começa aqui.<br />
-            Encontre treinos, dicas e muito mais!
-          </p>
-          <ul>
-            <li>
-              <a target="_blank" href="https://instagram.com/app.fitly"
-                ><span class="fa-brands fa-instagram"></span
-              ></a>
-            </li>
-            <li>
-              <a target="_blank" href="https://tiktok.com/@app.fitly"
-                ><span class="fa-brands fa-tiktok"></span
-              ></a>
-            </li>
-            <li>
-              <a target="_blank" href="https://x.com/app_fitly"
-                ><span class="fa-brands fa-twitter"></span
-              ></a>
-            </li>
-          </ul>
-        </div>
-        <div class="mapSite">
-          <h2>Indice</h2>
-          <ul>
-            <li>
-              <a href="/FitlyApp/">Início</a>
-            </li>
-            <li>
-              <a href="/FitlyApp/Sobre-o-projeto/"> Nosso projeto </a>
-            </li>
-            <li>
-              <a href="/FitlyApp/Artigos/">Artigos</a>
-            </li>
-            <li>
-              <a href="/FitlyApp/Referencias/">Referências</a>
-            </li>
-          </ul>
-        </div>
-        <div class="contact">
-          <h2>Contato</h2>
-          <p>Tem alguma dúvida? Nos contate!</p>
-          <p class="email">Fitlyapp1@gmail.com</p>
-          <p>
-            Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
-            Federal Catarinense
-          </p>
-        </div>
+  <footer>
+    <div>
+      <div class="logo">
+        <a href="/FitlyApp/">
+          <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background" />
+          <h2>Fitly</h2>
+        </a>
+        <p>
+          Sua jornada para uma vida mais tranquila <br />
+          começa aqui.<br />
+          Encontre treinos, dicas e muito mais!
+        </p>
+        <ul>
+          <li>
+            <a target="_blank" href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"></span></a>
+          </li>
+          <li>
+            <a target="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
+          </li>
+          <li>
+            <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
+          </li>
+        </ul>
       </div>
-      <div class="direitos">
-        <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
+      <div class="mapSite">
+        <h2>Indice</h2>
+        <ul>
+          <li>
+            <a href="/FitlyApp/">Início</a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Sobre-o-projeto/"> Nosso projeto </a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Artigos/">Artigos</a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Referencias/">Referências</a>
+          </li>
+        </ul>
       </div>
-    </footer>
-    <script src="/FitlyApp\Base\script.js"></script>
-    <script>
-      let eClaro = true;
+      <div class="contact">
+        <h2>Contato</h2>
+        <p>Tem alguma dúvida? Nos contate!</p>
+        <p class="email">Fitlyapp1@gmail.com</p>
+        <p>
+          Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
+          Federal Catarinense
+        </p>
+      </div>
+    </div>
+    <div class="direitos">
+      <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+  <script src="/FitlyApp/Base/script.js"></script>
+  <script>
+    let eClaro = true;
     const raiz = document.documentElement;
     let luaImg = document.getElementById('lua');
     let solImg = document.getElementById("sol");
@@ -220,9 +214,9 @@
         for (const item of listaParticipantes) {
           item.style.backgroundColor = "#1D201F";
         }
-        eClaro = false; 
-        
-      }else {
+        eClaro = false;
+
+      } else {
         raiz.style.setProperty('--color-background', '#f7f7f7');
         raiz.style.setProperty('--color-text', '#0D1B2A');
         solImg.style.display = "none";
@@ -234,6 +228,9 @@
         eClaro = true;
       }
     })
-    </script>
+  </script>
+</body>
+
+
 
 </html>
