--- a/FitlyApp/index.html
+++ b/FitlyApp/index.html
@@ -30,7 +30,7 @@
     <header>
       <h1 class="logo">
         <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
+        <a href="/FitlyApp">Fitly</a>
       </h1>
       <nav class="nav-menu">
      <button id="btn">
