Ajustes Indexação E Botão

--- a/FitlyApp/atv-form-main/index.html
+++ b/FitlyApp/atv-form-main/index.html
@@ -23,7 +23,7 @@
           </label>
           
           <h3>Sexo</h3>
-          <label>
+          <label class="opcao">
             <input type="radio" name="genero" value="Masculino" required />Masculino
           </label>
           <label>
