--- a/FitlyApp/index.html
+++ b/FitlyApp/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitly</title>
-    <link rel="stylesheet" href="Base/base.css" />
-    <link rel="stylesheet" href="Base/style.css">
+    <link rel="stylesheet" href="Base/base.css?v=2" />
+    <link rel="stylesheet" href="Base/style.css?v=2">
+    <link rel="icon" type="image/x-icon" href="/FitlyApp/Imagens/logos/FitlyLogo.png">
     <script>
       const images = [
         "Imagens/img_pag-inicial/ambitious-studio-rick-barrett-03b61PY89hs-unsplash.jpg",
