--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Fitly</title>
     <link rel="stylesheet" href="FitlyApp/Base/base.css" />
     <link rel="stylesheet" href="FitlyApp/Base/style.css">
+    <link rel="icon" type="image/x-icon" href="/FitlyApp/Imagens/logos/FitlyLogo.png">
     <script>
       const images = [
         "FitlyApp/Imagens/img_pag-inicial/ambitious-studio-rick-barrett-03b61PY89hs-unsplash.jpg",
@@ -30,7 +31,7 @@
     <header>
       <h1 class="logo">
         <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
+        <a href="/FitlyApp">Fitly</a>
       </h1>
       <nav class="nav-menu">
      <button id="btn">
