Mais Alguns Ajustes no Formulário

--- a/FitlyApp/atv-form-main/index.html
+++ b/FitlyApp/atv-form-main/index.html
@@ -14,15 +14,15 @@
         
         <form action="#">
           <label class="texto">
-            <h3>Nome</h3>
+            <h4>Nome</h4>
             <input type="text" placeholder="Seu nome" id="nome" required/>
           </label>
           <label class="texto">
-            <h3>Idade</h3>
+            <h4>Idade</h4>
             <input type="number" placeholder="Sua idade" min="0" id="idade" required/>
           </label>
           
-          <h3>Sexo</h3>
+          <h4>Sexo</h4>
           <label class="opcao">
             <input type="radio" name="genero" value="Masculino" required />Masculino
           </label>
@@ -154,7 +154,7 @@
           <label class="opcao">
             <input type="radio" name="saude" value="1" required />Sim
           </label>
-          <label class="opcao">
+          <label >
             <input type="radio" name="saude" value="2" required />Não
           </label>
         </form>
