Adição da lógica do site, falta exibir para o usuário

--- a/FitlyApp/atv-form-main/index.html
+++ b/FitlyApp/atv-form-main/index.html
@@ -158,7 +158,7 @@
             <input type="radio" name="saude" value="2" required />Não
           </label>
         </form>
-        <button type="button" onclick="vaiPagina9()">Próximo</button>
+        <button type="button" onclick="vaiPagina9(), calcTudo()">Próximo</button>
       </section>
 
       <section class="pag9">
@@ -167,7 +167,7 @@
         <ul>
           <li>
             <p>Sua meta diária (dias de semana) é de:</p>
-            <p><strong>2116</strong></p>
+            <p><strong></strong></p>
             <p>kcal</p>
           </li>
         </ul>
