Finalização Formulário Estático

--- a/FitlyApp/Artigos/MicroHabitos.html
+++ b/FitlyApp/Artigos/MicroHabitos.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/FitlyApp/Base/base.css">
   <link rel="stylesheet" href="css/micro-habitos.css">
   <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
+  <link rel="icon" type="image/x-icon" href="/FitlyApp/Imagens/logos/FitlyLogo.png">
 </head>
 
 <body>
