--- a/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
+++ b/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
@@ -6,6 +6,7 @@
     <title>Beneficios alimentação saudável</title>
     <link rel="stylesheet" href="/FitlyApp/Base/base.css" />
     <link rel="stylesheet" href="css/style-beneficios.css" />
+    <link rel="icon" type="image/x-icon" href="/FitlyApp/Imagens/logos/FitlyLogo.png">
     <script
       src="https://kit.fontawesome.com/a1f8cb2104.js"
       crossorigin="anonymous"
