--- a/FitlyApp/Artigos/OrganizaçãoAlimentar.html
+++ b/FitlyApp/Artigos/OrganizaçãoAlimentar.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/organização_alimentar.css">
     <link rel="stylesheet" href="/FitlyApp/Base/base.css">
     <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="/FitlyApp/Imagens/logos/FitlyLogo.png">
 </head>
 
 <body>
