--- a/FitlyApp/atv-form-main/index.html
+++ b/FitlyApp/atv-form-main/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Atividade Formulário</title>
     <link rel="stylesheet" href="css/style.css"/>
-<<<<<<< HEAD
     <link rel="icon" type="image/x-icon" href="/FitlyApp/Imagens/logos/FitlyLogo.png">
-=======
-</script>
->>>>>>> f0ffef9a3216b459854318c0efea80bf13f86e89
+    <link rel="stylesheet" href="script.js">
   </head>
   <body>
     <main>
