Toda a lógica aplicada

--- a/FitlyApp/atv-form-main/index.html
+++ b/FitlyApp/atv-form-main/index.html
@@ -170,7 +170,7 @@
 
         <div class="resultado-principal">
           <p>Sua meta diária é de:</p>
-          <span id="resultado-calorias">0</span>
+          <span id="resultado-calorias"></span>
           <p>kcal</p>
         </div>
 
@@ -190,8 +190,10 @@
             <span id="resultado-gorduras">0g</span>
           </div>
         </div>
-        <button class="voltar" type="button">Voltar</button>
+        <button class="voltar" type="button" onclick="voltaPag1()">Voltar</button>
         <p class="aviso">Atenção: Este é um valor estimado. Para um plano alimentar preciso, consulte um nutricionista.</p>
+        <div class="" id="dados-gerais">
+        </div>
       </section>
     </main>
     
