Exclui a versão beta do formulário

--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -87,7 +87,7 @@
           <p class="txt">
             Responsável pela
             pesquisa e auxiliar no desenvolvimento das partes estáticas do
-            site.
+            site, além de ajudar na lógica.
           </p>
           <p>
             <img class="imagem" src="../Imagens/Img_integrantes/APedro.jpg" alt="Pedro josé" />
@@ -97,8 +97,7 @@
         <li>
           <strong>Victor Feliciano:</strong>
           <p class="txt">
-            Responsável pela as funcionalidades do
-            site, como login e outros cálculos com dados informados pelo usuário.
+            Responsável pela revisão dos erros encontrados no validador.
           </p>
           <p>
             <img class="imagem" src="../Imagens/Img_integrantes/AFeliciano.jpg" alt="Victor Murilo" />
