--- a/FitlyApp/index.html
+++ b/FitlyApp/index.html
@@ -66,7 +66,7 @@
           <div class="inicio">
             <h1>Transforme sua vida com saúde e tecnologia</h1>
             <p>Controle calorias, treine e alcance seus objetivos.</p>
-            <a href="/FitlyApp/Formulario/">Comece Agora</a>
+            <a href="/FitlyApp/atv-form-main/">Comece Agora</a>
           </div>
         </div>
       </section>
