--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="logo">
           <a href="/FitlyApp/">
             <img
-              src="Imagens/logos/logoFitlySemTexto.png"
+              src="FitlyApp/Imagens/logos/logoFitlySemTexto.png"
               alt="Fitly_background"
             />
             <h2>Fitly</h2>
@@ -201,7 +201,7 @@
         <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
       </div>
     </footer>
-    <script src="Base/script.js"></script>
+    <script src="FitlyApp/Base/script.js"></script>
 
     <script>
       let eClaro = true;
