Adição das informações gerais

--- a/FitlyApp/Formulario/index.html
+++ b/FitlyApp/Formulario/index.html
@@ -244,7 +244,9 @@
       <button class="voltar" type="button" onclick="voltaPag1()">Voltar</button>
       <p class="aviso">Atenção: Este é um valor estimado. Para um plano alimentar preciso, consulte um nutricionista.
       </p>
-      <div class="" id="dados-gerais">
+      <div class="">
+        <p id="dados-gerais">
+        </p>
       </div>
     </section>
   </main>
