Ajustes no Objeto do Formulário

--- a/FitlyApp/Formulario/index.html
+++ b/FitlyApp/Formulario/index.html
@@ -245,7 +245,7 @@
       <p class="aviso">Atenção: Este é um valor estimado. Para um plano alimentar preciso, consulte um nutricionista.
       </p>
       <div class="">
-        <p id="dados-gerais">
+        <p class="dados-gerais" id="dados-gerais">
         </p>
       </div>
     </section>
