--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -97,7 +97,7 @@
         <li>
           <strong>Victor Feliciano:</strong>
           <p class="txt">
-            Responsável pela revisão dos erros encontrados no validador.
+            Responsável pela revisão dos erros encontrados no validador, além de alguns ajustes no javascript.
           </p>
           <p>
             <img class="imagem" src="../Imagens/Img_integrantes/AFeliciano.jpg" alt="Victor Murilo" />
