--- a/FitlyApp/index.html
+++ b/FitlyApp/index.html
@@ -126,10 +126,10 @@
       </section>
       <section class="CTA">
         <h2>
-          Sua jornada para o topo começa <br />
+          Sua jornada para o topo começa<br/>
           com o primeiro passo.
         </h2>
-        <a href="/Formulario/">Comece Agora</a>
+        <a href="Formulario/">Comece Agora</a>
         <img
           src="/FitlyApp/Imagens/img_pag-inicial/geike-verniers-UXVH8QPBlIQ-unsplash.jpg"
           alt="Imagem CTA"
